--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1814,6 +1814,11 @@
       background-color: var(--color-gray-900);
     }
   }
+  .dark\:bg-gray-900\/30 {
+    &:where(.dark, .dark *) {
+      background-color: color-mix(in oklab, var(--color-gray-900) 30%, transparent);
+    }
+  }
   .dark\:bg-green-600 {
     &:where(.dark, .dark *) {
       background-color: var(--color-green-600);
